feat: extension styles, metamask connection and tracking setup

--- a/src/react/features/Popup/styles.scss
+++ b/src/react/features/Popup/styles.scss
@@ -1,3 +1,11 @@
 .popup {
-    
+    .rewards {
+        p {
+            font-size: var(--font-size-small);
+        }
+
+        .reward-points {
+            color: var(--color-success);
+        }
+    }
 }
