feat: some style updates, switch to green, and note button

--- a/src/react/features/Popup/styles.scss
+++ b/src/react/features/Popup/styles.scss
@@ -8,4 +8,8 @@
             color: var(--color-success);
         }
     }
+
+    .note-text {
+        color: var(--color-font-light-gray);
+    }
 }
