--- a/src/react/styles/globals.scss
+++ b/src/react/styles/globals.scss
@@ -48,7 +48,7 @@
 
   --color-disabled: #dedede;
 
-  --color-success: #66C61C;
+  --color-success: #28A745;
   --color-error: #b42318;
 
   --color-primary: #e9bf78;
