feat: metrics integration

--- a/src/react/styles/globals.scss
+++ b/src/react/styles/globals.scss
@@ -42,6 +42,7 @@
   --color-card-light-background: rgba(48, 48, 48, 0.05);
   --color-card-border: #1F1F1F;
   --color-tooltip-background: #242424;  
+  --color-border-light: #454545;
   --color-font-white: white;
   --color-font-black: black;
   --color-font-light: rgba(60, 60, 60, 0.8);
