--- a/src/react/styles/_dashboard.scss
+++ b/src/react/styles/_dashboard.scss
@@ -25,12 +25,35 @@
 .btn-connect {
   background: var(--color-primary);
   text-align: center;
-  font-weight: var(--font-semibold);
+  font-weight: var(--font-medium);
   font-size: var(--font-size-smaller);
-  padding-block: var(--spacing-small);
-  padding-inline: var(--spacing-large);
+  padding: var(--spacing-small) var(--spacing-xlarge);
   border-radius: var(--border-radius-large);
   border: none;
+
+  cursor: pointer;
+
+  &:hover {
+    background: #ffc35c;
+  }
+}
+
+.account-container {
+  border-radius: 50px;
+  height: 36px;
+  border: solid 1px var(--color-border-light);
+
+  font-size: var(--font-size-small);
+
+  align-items: center;
+
+  padding: var(--spacing-large) var(--spacing-2xl);   
+
+  gap: var(--spacing-small);
+  img {
+    width: 10px;
+    height: 10px;
+  }
 }
 
 .sidebar {
@@ -50,7 +73,7 @@
 
     .sidebar-item {
       width: 100%;
-      height: 60px;
+      height: 50px;
 
       padding: var(--spacing-small) var(--spacing-large);
       padding-left: var(--spacing-xlarge);
@@ -64,10 +87,10 @@
         background: var(--color-background);
 
         &:hover {
-            background: var(--color-light-background);
-          }
+          background: var(--color-light-background);
+        }
       }
-      
+
       &:hover {
         background: var(--color-background);
       }
@@ -79,6 +102,7 @@
 
       p {
         font-size: var(--font-size-small);
+        color: var(--color-font-white);
       }
     }
   }
