--- a/src/react/styles/globals.scss
+++ b/src/react/styles/globals.scss
@@ -43,6 +43,7 @@
   --color-card-border: #1f1f1f;
   --color-tooltip-background: #242424;
   --color-border-light: #454545;
+  --color-text-disabled: #595959;
   --color-font-white: white;
   --color-font-black: black;
   --color-font-light: rgba(60, 60, 60, 0.8);
