--- a/src/react/styles/_dashboard.scss
+++ b/src/react/styles/_dashboard.scss
@@ -71,6 +71,10 @@
   .sidebar-item-container {
     gap: var(--spacing-small);
 
+    .sidebar-item-link {
+        text-decoration: none;;
+    }
+
     .sidebar-item {
       width: 100%;
       height: 50px;
