feat: design update, added new poinst, updated metrics just for dashboard

--- a/src/react/styles/globals.scss
+++ b/src/react/styles/globals.scss
@@ -50,6 +50,7 @@
   --color-font-light-gray: #838383;
   --color-font-lighter-gray: #d6d6d6;
   --color-skeleton: rgba(255, 255, 255, 0.1);
+  --color-button-light: #DCDCDC;
 
   --color-disabled: #dedede;
 
