--- a/src/react/features/Popup/styles.scss
+++ b/src/react/features/Popup/styles.scss
@@ -34,4 +34,25 @@
   .note-text {
     color: var(--color-font-light-gray);
   }
+
+  .positive-value-text {
+    color: var(--color-success);
+  }
+}
+
+.metamask-account {
+  background-color: var(--color-button-light);
+  padding: var(--spacing-medium) var(--spacing-large);
+  border-radius: 50px;
+
+
+  p:first-of-type {
+    font-weight: bold;
+    font-size: 14;
+  }
+
+p:nth-of-type(2) {
+  font-weight: normal;
+  font-size: 12;
+}
 }
