feat: design update

--- a/src/react/features/Popup/styles.scss
+++ b/src/react/features/Popup/styles.scss
@@ -42,7 +42,7 @@
 
 .metamask-account {
   background-color: var(--color-button-light);
-  padding: var(--spacing-medium) var(--spacing-large);
+  padding: var(--spacing-small) var(--spacing-xlarge);
   border-radius: 50px;
 
 
