--- a/src/react/styles/globals.scss
+++ b/src/react/styles/globals.scss
@@ -50,7 +50,7 @@
   --color-font-light-gray: #838383;
   --color-font-lighter-gray: #d6d6d6;
   --color-skeleton: rgba(255, 255, 255, 0.1);
-  --color-button-light: #DCDCDC;
+  --color-button-light: #dcdcdc;
 
   --color-disabled: #dedede;
 
@@ -139,3 +139,5 @@ h6 {
 .logo-invert {
   filter: invert(1);
 }
+
+
